# true-random-number-generator

./: .gitignore  Makefile  README.md  pyproject.toml
src/butterfly_generator/: generator.py
src/generator/: main.py  random_number_generator.py
tests/: test_random_number_generation.py
