[project]
name = "butterfly-generator"
version = "0.1.0"
description = "Random number generator using weather data"
authors = [
    {name = "Dr. Nobel Khandaker", email = "nobel@outlook.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pytest>=8.2.2",
    "isort (>=6.0.1,<7.0.0)",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache 2.0"}

[tool.poetry]
packages = [{include = "generator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
